Adds grouping configuration for working-eu
This means that [S045](https://github.com/alphagov/finder-frontend/blob/master/app/lib/brexit_checker/actions.yaml#L1764)
will no longer error, because the grouping configuration is now present.

Resolves: https://sentry.io/organizations/govuk/issues/2117074487/?project=202224&query=is%3Aunresolved

--- a/app/lib/brexit_checker/groups.yaml
+++ b/app/lib/brexit_checker/groups.yaml
@@ -21,6 +21,9 @@ groups:
 - key: working-uk
   heading: Working in the UK
   priority: 5
+- key: working-eu
+  heading: Working in the EU
+  priority: 5
 - key: studying-eu
   heading: Studying in the EU
   priority: 4
