--- a/package.json
+++ b/package.json
@@ -5,10 +5,28 @@
   "author": "Government Digital Service",
   "license": "MIT",
   "scripts": {
-    "lint": "standard app/assets/javascripts/{*.js,**/*.js} spec/javascripts/{*.js,**/*.js}",
-    "lint:fix": "yarn run lint --fix"
+    "lint": "yarn run lint:js",
+    "lint:js": "standardx 'app/assets/javascripts/**/*.js' 'spec/javascripts/**/*.js'"
+  },
+  "standardx": {
+    "env": {
+      "browser": true,
+      "jquery": true,
+      "jasmine": true
+    },
+    "globals": [
+      "GOVUK"
+    ],
+    "ignore": [
+      "spec/javascripts/vendor"
+    ]
+  },
+  "eslintConfig": {
+    "rules": {
+      "no-var": 0
+    }
   },
   "devDependencies": {
-    "standard": "^12.0.1"
+    "standardx": "^7.0.0"
   }
 }
