Actually lint Scss
Oops, I missed this in 3182fadc9e103eff9de7b09cbebd675e18871823. It
looks like I've added it in quickly enough that no fresh linting
violations have slipped in.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Government Digital Service",
   "license": "MIT",
   "scripts": {
-    "lint": "yarn run lint:js",
+    "lint": "yarn run lint:js && yarn run lint:scss",
     "lint:js": "standardx 'app/assets/javascripts/**/*.js' 'spec/javascripts/**/*.js'",
     "lint:scss": "stylelint app/assets/stylesheets/"
   },
