Add text for dual nationals
Feedback indicates that it's not clear what to do if you are a dual national.

This isn't ideal, but should hopefully help.

https://trello.com/c/9AT0KAPb/627-add-details-component-with-content-for-dual-nationality-users

--- a/app/lib/brexit_checker/questions.yaml
+++ b/app/lib/brexit_checker/questions.yaml
@@ -4,6 +4,8 @@ questions:
     type: single
     caption: About you and your family
     text: 'What nationality are you?'
+    detail_title: What if I have dual nationality?
+    detail_text: <p>If you have dual nationality, select one nationality and continue to get results for that nationality. You’ll need to complete the checker again to get results for your second nationality.</p>
     options:
       - label: British
         value: nationality-uk
